Make both DI- and ctor-based deserialization work.
Changed horribly-named ContentFactory.Handers property.

Modified the various places that used to retrieve a content type implementation instance from DI to check whether services are in use or not.

--- a/Solutions/Corvus.ContentHandling/Corvus/ContentHandling/Resources.resx
+++ b/Solutions/Corvus.ContentHandling/Corvus/ContentHandling/Resources.resx
@@ -134,4 +134,8 @@
     <value>No service for type '{0}' has been registered.</value>
     <comment>{0} = service type</comment>
   </data>
+  <data name="ImplementingTypeNoDefaultCtor" xml:space="preserve">
+    <value>The implementing type ({0}) for content type {1} uses constructor-based deserialization, so you cannot instantiate it in this way</value>
+    <comment>{0} = implementation type, {1} = content type</comment>
+  </data>
 </root>
